# UaiBot

./: .githubeignore  .gitignore  COMMERCIAL_LICENSE  LICENSE  README.md  README.md.new  TODO.md  __init__.py  all_test_results.txt  awareness_env_test.py  browse_kuwait.txt  cleanup_syntax.py  cli_graph_test_output.txt  command_execution_principles.txt  command_processor.py  demo_emoji_interface.py  demo_output_formatting.py  demo_output_styles.py  demo_run_command.py  empty_folders.txt  enhancements.txt  enhancements2.txt  enhancements3.txt  enhancements5.txt  execution_state.json  fix_extractor.py  fix_logging.py  gui_launcher.py  idea.txt  install.sh  launch.py  launch_gui.py  license_key.json.template  main.py  main.py.backup_20250516  master_arch.md  master_arch.txt  nohup.out  pyproject.toml  random_tasks.txt  (+26 more)
app/: __main__.py  license_check.py  main.py  start_uaibot.py
audio/: audio_manager.py
backup/: compare_interfaces.py
command_processor/: __init__.py  ai_command_extractor.py  ai_driven_processor.py  ai_response_cache.py  command_processor.py  command_processor_main.py  direct_execution_handler.py  error_handler.py  file_operations_handler.py  folder_search_handler.py  logger.py  usb_query_handler.py  user_interaction_history.py
commands/: browser_search.py
config/: command_patterns.json  output_styles.json  settings.json  user_settings.json
core/: ai_handler.py  arg_parser.py  browser_handler.py  command_detector.py  command_help.py  config_manager.py  exceptions.py  file_operations.py  file_search.py  file_utils.py  fix_notes.py  fixed_find_folders.py  license_check.py  logging_config.py  parallel_utils.py  platform_commands.py  shell_handler.py  shell_handler.py.broken  utils.py
demo/: browser_search_demo.py  demo_run_command.py  simple_style_demo.py
device_manager/: __init__.py  usb_detector.py
docs/: ai_driven_implementation_summary.md  arabic_command_support.md  command_processor_enhancements.md  configuration.md  file_operations_api.md  input_control.md  json_format_examples.md  learning.md  mouse_keyboard_control.md  multilingual_coding_guide.md  multilingual_support.md  multilingual_testing.md  output_formatting_migration.md  output_system.md  platform_support_architecture.md  project_structure.md  regex_to_ai_transition.txt  sequence_test.md  system_info_documentation.md
documentation/: ai_command_interpreter.md  ai_driven_command_handling.md  command_execution_implementation.md  folder_operations.md  json_format_examples.md
examples/: debug_mouse_keyboard.py  example_command_processor.py  file_operations_examples.md  log_to_console.py  research_example.py  simple_import_test.py
findings/: search_function_analysis.md
fix/: fix_arabic_commands.py  fix_function.py  fix_indentation.py  fix_shell_handler.py  run_validation.py  validate_arabic_commands.py  verify_arabic_commands.py  verify_multilingual_fix.py
gui/: avatar.py  dual_window_emoji.py  gui_launcher.py  main_window.py  new_avatar.py
input_control/: __init__.py  mouse_keyboard_handler.py
log/: improvement_plan_2025-05-20.md
master/: README.md  architecture.md  class_architecture.md  cursor_rules.mdc  main_prompt.txt  patch1.txt  prompt.txt  refactor_code_master.md  reorganize_codebase.py  ubuntu_test_conventions.md
platform/: platform_manager.py  platform_utils.py  test_platform.py  test_platform_components.py
platform_uai/: platform_manager.py  platform_utils.py  test_platform_components.py
plugins/: weather_plugin.py
(+1066 files in other folders)
